set display of volume bar area and child components to flex to fix alignment

--- a/components/audio-player.css
+++ b/components/audio-player.css
@@ -66,6 +66,6 @@
   .rhap_volume-bar-area,
   .rhap_volume-button,
   .rhap_volume-indicator {
-    display: block;
+    display: flex;
   }
 }
